<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_android"
        android:shortcutDisabledMessage="@string/compose_disabled_message1"
        android:shortcutId="main"
        android:shortcutLongLabel="@string/compose_shortcut_long_label1"
        android:shortcutShortLabel="@string/compose_shortcut_short_label1"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bayraktar.servicesexample.views.MainActivity"
            android:targetPackage="com.bayraktar.servicesexample" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
    <!-- Specify more shortcuts here. -->
    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_beach"
        android:shortcutDisabledMessage="@string/settings_disabled_label"
        android:shortcutId="settings"
        android:shortcutLongLabel="@string/settings_long_label"
        android:shortcutShortLabel="@string/settings_short_label"
        tools:targetApi="n_mr1">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.bayraktar.servicesexample.views.SettingsActivity"
            android:targetPackage="com.bayraktar.servicesexample" />
        <!-- If your shortcut is associated with multiple intents, include them
             here. The last intent in the list determines what the user sees when
             they launch this shortcut. -->
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>